--- a/VisualisingMessages/View/Base.lproj/Main.storyboard
+++ b/VisualisingMessages/View/Base.lproj/Main.storyboard
@@ -27,15 +27,38 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRc-L9-rYM">
                                                 <rect key="frame" x="207" y="35" width="0.0" height="0.0"/>
                                                 <fontDescription key="fontDescription" name="SinhalaSangamMN-Bold" family="Sinhala Sangam MN" pointSize="21"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="0.1333333333" green="0.36078431370000003" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hlr-av-6yA">
+                                                <rect key="frame" x="0.0" y="68" width="414" height="2"/>
+                                                <color key="backgroundColor" red="0.1333333333" green="0.36078431370000003" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="F0p-pc-YlH"/>
+                                                </constraints>
+                                            </view>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="ALL ➣" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NPC-76-Pvh">
+                                                <rect key="frame" x="327" y="20" width="57" height="30"/>
+                                                <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="LMq-lr-D73"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.1333333333" green="0.36078431370000003" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="SinhalaSangamMN" family="Sinhala Sangam MN" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="0or-40-7tB"/>
                                             <constraint firstItem="mRc-L9-rYM" firstAttribute="centerX" secondItem="K2Y-Y7-Z9c" secondAttribute="centerX" id="24N-dd-bMI"/>
+                                            <constraint firstAttribute="trailing" secondItem="Hlr-av-6yA" secondAttribute="trailing" id="KmK-ki-byM"/>
+                                            <constraint firstItem="Hlr-av-6yA" firstAttribute="leading" secondItem="K2Y-Y7-Z9c" secondAttribute="leading" id="e1f-nN-jd7"/>
                                             <constraint firstItem="mRc-L9-rYM" firstAttribute="centerY" secondItem="K2Y-Y7-Z9c" secondAttribute="centerY" id="eYv-Yl-yRH"/>
+                                            <constraint firstAttribute="trailing" secondItem="NPC-76-Pvh" secondAttribute="trailing" constant="30" id="iZO-Zv-IKK"/>
+                                            <constraint firstAttribute="bottom" secondItem="Hlr-av-6yA" secondAttribute="bottom" id="sEu-IO-lY8"/>
+                                            <constraint firstItem="NPC-76-Pvh" firstAttribute="centerY" secondItem="K2Y-Y7-Z9c" secondAttribute="centerY" id="uen-CC-J9A"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2gf-OY-1Kh" customClass="GMSMapView">
@@ -65,6 +88,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="filterTextField" destination="NPC-76-Pvh" id="EPR-dQ-pze"/>
                         <outlet property="mapView" destination="2gf-OY-1Kh" id="yjg-Ge-ubv"/>
                         <outlet property="titleLabel" destination="mRc-L9-rYM" id="4Dt-nX-CVk"/>
                     </connections>
